2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/about/Makefile.am, lib/contacts/Makefile.am,
	lib/druid/Makefile.am, lib/Makefile.am, lib/widgets/Makefile.am,
	lib/xdap/Makefile.am, src/main_window.cpp, src/Makefile.am: Modified
	the way the locale files are found, again preparing the way for a nice
	win32 fix.

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* src/sound_handling.cpp, src/Makefile.am: Modified the way the sound
	files are found, again preparing the way for a nice win32 fix.

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* src/ils.cpp, src/main_window.cpp, src/Makefile.am: Modified the way
	the datadir is found, again preparing the way for a nice win32 fix.

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* src/addressbook_window.cpp, src/endpoint.cpp, src/main_window.cpp,
	src/sipendpoint.cpp: Protected calls to the tray by if (tray).

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/about/Makefile.am, lib/druid/Makefile.am, lib/e-splash.c,
	lib/Makefile.am, lib/widgets/Makefile.am, lib/xdap/Makefile.am,
	src/callbacks.cpp, src/chat_window.cpp, src/druid.cpp,
	src/log_window.cpp, src/main_window.cpp, src/Makefile.am,
	src/pref_window.cpp, src/tools.cpp: Modified the way pixmaps are
	found, preparing the way for a nice win32 fix.

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Simplified finding the schemas.

2005-12-08  Julien Puydt  <jpuydt@free.fr>

	* src/main_window.cpp: Protected the call to
	gtk_window_set_urgency_hint by a #ifdef to save the win32 build.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/sipendpoint.cpp: Set the NAT binding timeout based on the 
	GConf key.

2005-12-08  Damien Sandras  <dsandras@gnome.org>
	
	* gnomemeeting.schemas.in.in: Increased RTP port range. It can be
	reduced for small installations, or increased further for big
	installations with non symmetric NAT. Added adjustable NAT binding
	refresh timeout.

2005-12-08  Damien Sandras  <dsandras@gnome.org>
