@@ -1,5 +1,12 @@
 INCLUDES = \
-	-I$(top_srcdir)/src -I$(top_srcdir)/lib -I$(top_srcdir)/lib/widgets -I$(top_srcdir)/lib/xdap $(GNOME_INCLUDEDIR) @GNOMEMEETING_CFLAGS@ -DDATADIR=\""$(datadir)"\" -DSCHEMA_AGE=@SCHEMA_AGE@ 
+	-I$(top_srcdir)/src		\
+	-I$(top_srcdir)/lib		\
+	-I$(top_srcdir)/lib/widgets	\
+	-I$(top_srcdir)/lib/xdap	\
+	$(GNOME_INCLUDEDIR)		\
+	@GNOMEMEETING_CFLAGS@		\
+	-DDATADIR=\""$(datadir)"\"	\
+	-DSCHEMA_AGE=@SCHEMA_AGE@ 
 
 #-DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED
 
