@@ -1,5 +1,9 @@
 2005-12-11  Julien Puydt  <jpuydt@free.fr>
 
+	* src/Makefile.am: Cosmetic.
+
+2005-12-11  Julien Puydt  <jpuydt@free.fr>
+
 	* lib/about/Makefile.am, lib/contacts/Makefile.am,
 	lib/druid/Makefile.am, lib/Makefile.am, lib/widgets/Makefile.am,
 	lib/xdap/Makefile.am, src/main_window.cpp, src/Makefile.am: Modified
